--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_animate: ^4.2.0
   get: ^4.6.5
 
 dev_dependencies:
@@ -28,17 +29,17 @@ flutter:
   fonts:
     - family: Rubik
       fonts:
-        - asset: assets/fonts/Rubik-Light.ttf 
+        - asset: assets\fonts\Rubik\Rubik-Light.ttf 
           weight: 300
-        - asset: assets/fonts/Rubik-Regular.ttf
+        - asset: assets\fonts\Rubik\Rubik-Regular.ttf
           weight: 400
-        - asset: assets/fonts/Rubik-Medium.ttf
+        - asset: assets\fonts\Rubik\Rubik-Medium.ttf
           weight: 500
-        - asset: assets/fonts/Rubik-SemiBold.ttf
+        - asset: assets\fonts\Rubik\Rubik-SemiBold.ttf
           weight: 600
-        - asset: assets/fonts/Rubik-Bold.ttf
+        - asset: assets\fonts\Rubik\Rubik-Bold.ttf
           weight: 700
-        - asset: assets/fonts/Rubik-Black.ttf
+        - asset: assets\fonts\Rubik\Rubik-Black.ttf
           weight: 900
         
         
