--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,45 +1,25 @@
 name: lestari
-description: A new Flutter project.
-publish_to: 'none'
 version: 0.1.0
-
-environment:
+publish_to: none
+description: A new Flutter project.
+environment: 
   sdk: '>=2.19.2 <3.0.0'
 
-dependencies:
-  flutter:
-    sdk: flutter
+dependencies: 
   flutter_animate: ^4.2.0
-  get: ^4.6.5
-
-dev_dependencies:
-  flutter_test:
+  get: 4.6.5
+  flutter: 
     sdk: flutter
-  flutter_lints: ^2.0.0
 
-flutter:
-  uses-material-design: true
-  assets:
+dev_dependencies: 
+  flutter_lints: ^2.0.0
+  flutter_test: 
+    sdk: flutter
+
+flutter: 
+  assets: 
     - assets/images/
     - assets/icons/
     - assets/fonts/
+  uses-material-design: true
 
-
-  # add fonts here
-  fonts:
-    - family: Rubik
-      fonts:
-        - asset: assets\fonts\Rubik\Rubik-Light.ttf 
-          weight: 300
-        - asset: assets\fonts\Rubik\Rubik-Regular.ttf
-          weight: 400
-        - asset: assets\fonts\Rubik\Rubik-Medium.ttf
-          weight: 500
-        - asset: assets\fonts\Rubik\Rubik-SemiBold.ttf
-          weight: 600
-        - asset: assets\fonts\Rubik\Rubik-Bold.ttf
-          weight: 700
-        - asset: assets\fonts\Rubik\Rubik-Black.ttf
-          weight: 900
-        
-        
