--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   get: 4.6.5
   http: 1.1.0
   intl: 0.18.1
+  webview_flutter: 4.2.2
+  url_launcher: 6.1.12
   flutter: 
     sdk: flutter
 
