--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   intl: 0.18.1
   webview_flutter: 4.2.2
   url_launcher: 6.1.12
+  carousel_slider: 4.2.1
+  popup_banner: 1.0.0
   flutter: 
     sdk: flutter
 
